# domin8

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
domin8/: __init__.py  tags.py
dominate/: document.py  dom1core.py  dom_tag.py  svg.py  tags.py  util.py
tests/: test_html.py
